[package]
name = "wacc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
owo-colors = { version = "4.0.0-rc.1" }
regex = "1.10.6"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.63"
